[package]
name = "tendermint-sys"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffi-support = "0.4.3"
log = "0.4.14"
prost = "0.7.0"
serde_json = "1.0.64"
# tendermint = "0.20.0"
tendermint-proto = "0.20.0"

[dev-dependencies]
env_logger = "0.8.4"

