[package]
name = "tendermint-sys"
version = "0.1.0"
edition = "2018"

[dependencies]
async-trait = { version = "0.1.50", optional = true }
ffi-support = "0.4.3"
log = "0.4.14"
prost = "0.8.0"
smol = { version = "1.2.5", optional = true }
lazy_static = "1.4.0"
tm-protos = { path = "../tm-protos" }

[dev-dependencies]
env_logger = "0.8.4"

[features]
default = ["async", "goleveldb"]
sync = []
async = ["smol", "async-trait"]
goleveldb = []
cleveldb = []

[[example]]
name = "sync_baseapp"
required-features = ["sync"]
# default-features = false

