[package]
name = "tendermint-sys"
version = "0.1.0"
edition = "2018"

[dependencies]
async-trait = { version = "0.1.50", optional = true }
log = "0.4.14"
prost = "0.8.0"
smol = { version = "1.2.5", optional = true }
lazy_static = "1.4.0"
tm-protos = { path = "../tm-protos" }
libc = "0.2"

[dev-dependencies]
env_logger = "0.8.4"
ctrlc = "3.2.0"

[features]
default = ["sync", "goleveldb"]
sync = []
async = ["smol", "async-trait"]
goleveldb = []
cleveldb = []

[[example]]
name = "sync_baseapp"
required-features = ["sync"]
# default-features = false

