[package]
name = "tm-protos"
version = "0.1.0"
edition = "2018"

[dependencies]
bytes = { version = "1.0.1", default-features = false }
prost = { version = "0.8", default-features = false, features = ["prost-derive"] }
prost-types = { version = "0.8", default-features = false }

[build-dependencies]
prost-build = "0.8.0"

